clang/test/BSC/Negative/OwnedStruct/memoryleak/destructor/generic-owned-struct-desturctor-param.cbs
// RUN: %clang_cc1 -verify %s
owned struct A<T> {
    public:
    int * owned a;
    ~A(A<T> this) {
    }// expected-error {{destructor for`owned A<int>` incorrect, this.a is of owned type and needs to be handled manually}}
};
int main() {
    int local = 1;
    A<int> a ={.a = (int * owned)&local};
    return 0;
}
